# cenote

./: .clang-format  .coverage  .gitignore  BUILD  Dockerfile  Plan.ipynb  README.md  TODO  WORKSPACE  build.zsh  cenote.sublime-project  cenote.sublime-workspace  conanfile.txt  conanprofile  coverage.sh  cpp_installs.sh  gas_planner.py  lint.sh  lint.zsh  requirements.txt  run_docker.sh  see_if_pybind_fails.zsh  setup.py  test.zsh  test_profile.yaml
app/: android.txt  buildozer.spec  cenote.kv  main.py
app/p4a-recipes/cenote/: __init__.py
app/p4a-recipes/dipplanner/: __init__.py
backend/: CMakeLists.txt
backend/include/bungee/: Buhlmann.h  Compartment.h  CompartmentManager.h  Constants.h  Mix.h  Scr.h  Tank.h  Tank.inl  Water.h  units.h
backend/src/: Buhlmann.cpp  Compartment.cpp  CompartmentManager.cpp  Mix.cpp  Scr.cpp  Tank.cpp  Water.cpp
backend/test/: test_Tank.cpp  test_Water.cpp  utils.h
bungee/: pybind.cpp
bungee/include/bungee/: CompartmentManager.h  Constants.h  Mix.h  Water.h
bungee/src/: Buhlmann.cpp  Compartment.cpp  Mix.cpp  Water.cpp
cenote/: config.py  deco.py  gas_usage.py  mix.py  parse.py  tank.py  usage.py  water.py
cenote/parse/: shearwater_xml.py  yaml.py
cenote/util/: calc_gas_usage.py  calc_mod.py  mod.py  plot.py  sac_from_scr.py  scr_from_sac.py  shearwater_xml_to_yaml.py
cpp/: CMakeLists.txt  conanfile.txt
cpp/include/bungee/: Buhlmann.h  Compartment.h  CompartmentManager.h  Constants.h  Mix.h  Models.h  Plan.h  Planner.h  Result.h  Scr.h  Tank.h  Water.h  bungee.h  custom_units.h  ensure.h  utils.h
cpp/include/bungee/deco/buhlmann/: Buhlmann.h  Compartment.h  CompartmentManager.h  Gradient.h  Models.h
cpp/src/: Mix.cpp  Plan.cpp  Result.cpp  Scr.cpp  Tank.cpp  Water.cpp  pybind.cpp  scratch.cpp
cpp/src/bungee/: Buhlmann.cpp  Compartment.cpp  CompartmentManager.cpp  Mix.cpp  Models.cpp  Plan.cpp  Planner.cpp  Result.cpp  Scr.cpp  Tank.cpp  Water.cpp  utils.cpp
cpp/src/bungee/deco/buhlmann/: Buhlmann.cpp  Compartment.cpp  CompartmentManager.cpp  Gradient.cpp  Models.cpp
cpp/test/: test_Buhlmann.cpp  test_Compartment.cpp  test_Models.cpp  test_Plan.cpp  test_Result.cpp  test_Scr.cpp  test_Tank.cpp  test_Water.cpp  utils.h
examples/: 115ft_30min.yaml  145ft_30min_full.json  145ft_40min_open.yaml  2022-06-25.yaml  big.json  big.yaml  chip.json  chip.yaml  long_dive_fixed_scr.yaml
examples/calc_gas_usage/: bailout_variable_scr.yaml  long_dive_fixed_scr.yaml  shearwater.xml
examples/gas_usage/: bailout.yaml
frontend/: setup.py
frontend/cenote/: deco.py  mix.py  tank.py  water.py
frontend/cenote/util/: scr_from_sac.py
frontend/test/cenote/: test_tank.py  test_usage.py
jupyter/: Plan.ipynb
jupyter/.ipynb_checkpoints/: Plan-checkpoint.ipynb
lib/: .gitignore  requirements.txt  setup.py
lib/bungee/: pybind.cpp
lib/bungee/include/bungee/: Buhlmann.h  Compartment.h  CompartmentManager.h  Constants.h  Models.h
lib/bungee/src/: Buhlmann.cpp  Compartment.cpp  CompartmentManager.cpp  Models.cpp
lib/cenote/: config.py  deco.py  parse.py  tank.py  usage.py  water.py
lib/cenote/util/: plot.py
lib/examples/: 2022-06-25.yaml  2022-06-25_dipplanner.txt  long_dive_fixed_scr.yaml
lib/test/: test_tank.py  test_usage.py
lib/test/bungee/: test_Buhlmann.py  test_Compartment.py  test_Models.py
lib/test/cenote/: test_mix.py
proto/: Quest.proto
py/: bungee.cpp  setup.py
py/cenote/: __init__.py  config.py  parse.py  units.py
py/examples/: square.yaml
py/scripts/: gas_match.py
py/test/cenote/: test_usage.py
py/test/data/: profile1.json  profile1.yaml  profile2.json  profile2.yaml
py/test/py/: test_get_plan.py  test_planner.py
python/cenote/util/: calc_gas_usage.py
python/scuba/: gas_usage.py
rs/: .gitignore  Cargo.toml
rs/src/: constants.rs  lib.rs  macros.rs  mix.rs  plan.rs  scr.rs  tank.rs  tank_config.rs  test_helpers.rs  test_utils.rs  units.rs  utils.rs  water.rs
rs/src/deco/: mod.rs  traits.rs
rs/src/deco/buhlmann/: compartment.rs  gf.rs  mod.rs  model.rs  models.rs
rs/tests/: test_utils.rs  test_water.rs
scripts/: app  build  calc_gas_usage.py  calc_scr.py  docker  jupyter  lint  report  sac_from_scr.py  scr_from_sac.py  test
scuba/: config.py  gas_usage.py
setup/: .clang-format  Dockerfile  conanfile.txt  requirements.txt
test/: test_gas_usage.py  test_mix.py  test_tank.py  test_usage.py  test_water.py
test/bungee/: test_Buhlmann.py
test/cenote/: test_mix.py  test_usage.py  test_water.py
test/data/gas_planner/: 1.yaml
test/python/: test_gas_usage.py
web/: app.py  plan.py  plot.py  plots.py  state.py
web/examples/: big.json
web/static/: bokeh_monokai_theme.yaml  style.css
web/templates/: index.html  plan.html  plot.html
